syntax = "proto3";

package platformvm;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/platformvm";

message SubnetValidatorRegistrationJustification {
  oneof preimage {
    // This should be set to obtain an attestation that a validator specified in
    // a ConvertSubnetTx has been removed from the validator set.
    SubnetIDIndex convert_subnet_tx_data = 1;
    // This should be set to a RegisterSubnetValidatorMessage to obtain an
    // attestation that a validator is not currently registered and can never be
    // registered. This can be because the validator was successfully added and
    // then later removed, or because the validator was never added and the
    // registration expired.
    bytes register_subnet_validator_message = 2;
  }
}

message SubnetIDIndex {
  bytes subnet_id = 1;
  uint32 index = 2;
}
